--- a/src/app/pages/_data/map/map.component.html
+++ b/src/app/pages/_data/map/map.component.html
@@ -1,8 +1,20 @@
 <nb-card>
   <nb-card-body>
 
-    <google-map [center]="position" [zoom]="8" width="100%" height="85vh" >
-      <map-marker [position]="position"></map-marker>
+    <google-map 
+      *ngIf="loaded"
+      [center]="{lat: data?.center?.lat, lng: data?.center?.lng}" 
+      [zoom]="8" 
+      width="100%" height="85vh" >
+      
+      <map-marker 
+        [position]="{lat: point?.lat, lng: point?.lng}"
+        [clickable]="true"
+        [label]='point?.label'
+        (mapMouseover)="showDialog(point)"
+        *ngFor="let point of data.points"
+      >
+      </map-marker>
     </google-map>
     
   </nb-card-body>
