--- a/src/app/pages/_data/alert/alert.component.scss
+++ b/src/app/pages/_data/alert/alert.component.scss
@@ -1,16 +1,7 @@
 @import '../../../@theme/styles/themes';
 
 @include nb-install-component() {
-  custom-bar-chart,
-  custom-pie-chart,
-  bar-echart,
-
-  ngx-chartjs-pie,
-  ngx-chartjs-bar,
-  ngx-chartjs-line,
-  ngx-chartjs-multiple-xaxis,
-  ngx-chartjs-bar-horizontal,
-  ngx-chartjs-radar {
+  d3-bar-chart {
     display: block;
     height: nb-theme(card-height-medium);
     width: 100%;
@@ -20,5 +11,15 @@
       height: 100%;
       width: 100%;
     }
+  }
+}
+
+.full-name-inputs,
+.validation-checkboxes {
+  display: flex;
+  margin: 0 -0.5rem;
+
+  > * {
+    margin: 0 0.5rem;
   }
 }
