--- a/src/app/pages/_data/antenna/antenna.component.html
+++ b/src/app/pages/_data/antenna/antenna.component.html
@@ -1,10 +1,77 @@
-<nb-card size="medium">
-
+<nb-card>
   <nb-card-header>
     Antena
   </nb-card-header>
+</nb-card>
 
-  <nb-card-footer>
+<nb-card>
+  <nb-card-body>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
+   
+      <div class="row">
+        <div class="col-4">
+          <label class="label">Latitude:*</label>
+          <input type="text" nbInput fullWidth placeholder="Latitude" [formControl]="latitude" [status]='getStatus(latitude)'>
+        </div>
 
-  </nb-card-footer>
+        <div class="col-4">
+          <label class="label">Longuitude:*</label>
+          <input type="text" nbInput fullWidth placeholder="Longuitude" [formControl]="longuitude"  [status]='getStatus(longuitude)'>
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-4">
+          <label class="label">Sentido:*</label>
+          <input type="text" nbInput fullWidth placeholder="Sentido" [formControl]="sentido" [status]='getStatus(sentido)'>
+        </div>
+
+        <div class="col-4">
+          <label class="label">Codigo Local:</label> 
+          <input type="text" nbInput fullWidth placeholder="Codigo Local" [formControl]="codigoLocal" [status]='getStatus(codigoLocal)'>
+        </div>
+
+        <div class="col-4">
+          <label class="label">Adicionar:</label>
+          <button nbButton outline type="submit" fullWidth status="primary">Adicionar</button>
+        </div>
+      </div>
+    </form>
+  </nb-card-body>
+</nb-card>
+
+<nb-card *ngIf="data.length" >
+  <nb-card-body>
+    <table class="table table-hover table-striped table-bordered">
+      <thead class="thead-light">
+        
+        <tr>
+          <th class="col-4">Latitude</th>
+          <th class="col-4">Longuitude</th>
+          <th class="col-4">Sentido</th>
+          <th class="col-4">Codigo Local</th>
+        </tr>
+
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let item of data" >
+          <td>{{item?.latitude}}</td>
+          <td>{{item?.longuitude}}</td>
+          <td>{{item?.sentido}}</td>
+          <td>{{item?.codigoLocal}}</td>
+        </tr>
+
+      </tbody>
+    </table>
+
+  </nb-card-body>
+  <nb-card-body>
+    <div class="offset-8 col-4">
+      <label class="label">Enviar:</label>
+      <button nbButton outline type="submit"  (click)="enviar()" fullWidth status="primary">Enviar</button>
+    </div>
+  </nb-card-body>
 </nb-card>
