--- a/src/app/pages/_data/rules/rules.component.html
+++ b/src/app/pages/_data/rules/rules.component.html
@@ -1,32 +1,67 @@
-<nb-card size="medium">
-
+<nb-card>
   <nb-card-header>
     Regras
   </nb-card-header>
+</nb-card>
 
-  <nb-card-footer>
-    
-    <nb-accordion>
-    
-      <nb-accordion-item>
 
-        <nb-accordion-item-header>
-          Filtros
-        </nb-accordion-item-header>
+<nb-card>
+  <nb-card-body>
+    <div class="col pt-4 pb-4">
+      <nb-accordion>
+        <nb-accordion-item>
+        
+          <nb-accordion-item-header>
+            Filtros 
+          </nb-accordion-item-header>
 
-        <nb-accordion-item-body>
-          <div class="full-name-inputs">
-            <input type="text" nbInput fullWidth placeholder="Inicio">
-            <input type="text" nbInput fullWidth placeholder="Final">
-            <button class="control-button" nbButton>
+          <nb-accordion-item-body>
+            <button class="control-button" nbButton type="submit">
               Buscar
             </button>
-          </div>
-        </nb-accordion-item-body>
+          </nb-accordion-item-body>
+        
+        </nb-accordion-item>
+      </nb-accordion>
+    </div>
 
-      </nb-accordion-item>
-    </nb-accordion>
-    
-  </nb-card-footer>
+    <div class="col">
+    </div>
+    <table class="table table-hover table-striped table-bordered">
+      <thead class="thead-light">
+        
+        <tr>
+          <th class="col-1">#</th>
+          <th class="col-4">Nome</th>
+          <th class="col-1">Tipo</th>
+          <th colspan="2" class="col-3 text-center">Data</th>
+          <th class="col-1">Status</th>
+          <th colspan="3" class="col-2 text-center">Ações</th>
+        </tr>
 
+        <tr>
+          <th colspan="6"></th>
+          <th colspan="3" class="col-2 text-center">
+            <button nbButton fullWidth outline status="success"  (click)="add()"> 
+          <nb-icon icon="plus-circle-outline"></nb-icon> </button></th>
+        </tr>
+
+      </thead>
+
+      <tbody>
+        <tr *ngFor="let item of data" >
+          <td>{{item?.id}}</td>
+          <td>{{item?.nome}}</td>
+          <td>{{item?.tipo}}</td>
+          <td>{{item?.data?.inicio}}</td>
+          <td>{{item?.data?.final}}</td>
+          <td>{{item?.status}}</td>
+          <td><button nbButton fullWidth outline status="warning" (click)="edit()"> <nb-icon icon="edit-outline"></nb-icon> </button></td>
+          <td><button nbButton fullWidth outline status="basic"  (click)="duplicate()"> <nb-icon icon="copy-outline"></nb-icon> </button></td>
+          <td><button nbButton fullWidth outline status="danger" (click)="delete()"> <nb-icon icon="trash-2-outline"></nb-icon> </button></td>
+        </tr>
+
+      </tbody>
+    </table>
+  </nb-card-body>
 </nb-card>
