--- a/src/app/pages/_data/rules/add/rules-add.component.html
+++ b/src/app/pages/_data/rules/add/rules-add.component.html
@@ -4,31 +4,31 @@
   </nb-card-header>
 </nb-card>
 
-<nb-card>
+<nb-card accent="success">
   <nb-card-body>
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
       
       <div class="row pb-3">
         <div class="col-8">
-          <label class="label">Nome*:</label>
+          <label class="label">Nome:*</label>
           <input type="text" [formControl]="nome" [status]='getStatus(nome)' nbInput fullWidth placeholder="Nome">
         </div>
 
         
         <div class="col-4">
-          <label class="label">Tipo*:</label>
-          <nb-select fullWidth  [formControl]="tipo" [status]='getStatus(tipo)' selected="1" placeholder="Tipo">
-            <nb-option value="1">Selecione</nb-option>
-            <nb-option value="1">MDFE</nb-option>
-            <nb-option value="2">NFE</nb-option>
-            <nb-option value="2">CTE</nb-option>
+          <label class="label">Tipo:*</label>
+          <nb-select fullWidth  [formControl]="tipo" [status]='getStatus(tipo)' placeholder="Tipo">
+            <nb-option [value]='null'>Selecione</nb-option>
+            <nb-option [value]="'MDFE'">MDFE</nb-option>
+            <nb-option [value]="'NFE'">NFE</nb-option>
+            <nb-option [value]="'CTE'">CTE</nb-option>
           </nb-select>
         </div>
       </div>
 
       <div class="row pb-3">
         <div class="col-12">
-          <label class="label">Descrição*:</label>
+          <label class="label">Descrição:*</label>
           <textarea type="text" [formControl]="descricao" [status]='getStatus(descricao)' nbInput fullWidth placeholder="Descrição"></textarea>
         </div>
       </div>
@@ -36,7 +36,7 @@
 
       <div class="row pb-3">
         <div class="col-3">
-          <label class="label">Importância*:</label>
+          <label class="label">Importância:*</label>
           <nb-select fullWidth placeholder="Tipo" [formControl]="importancia" [status]='getStatus(importancia)' >
             <nb-option value="1">1</nb-option>
             <nb-option value="2">2</nb-option>
@@ -52,7 +52,7 @@
         </div>
       
         <div class="col-3">
-          <label class="label">Menor esforço*:</label>
+          <label class="label">Menor esforço:*</label>
           <nb-select fullWidth selected="1" placeholder="Tipo" [formControl]="menorEsforco" [status]='getStatus(menorEsforco)'>
             <nb-option value="1">1</nb-option>
             <nb-option value="2">2</nb-option>
@@ -68,13 +68,13 @@
         </div>
 
         <div class="col-3">
-          <label class="label">Data de validade (Inicio)*:</label>
+          <label class="label">Data de validade (Inicio):*</label>
           <input nbInput fullWidth [nbDatepicker]="inicioPicker" placeholder="Inicio" [formControl]="dataInicio" [status]='getStatus(dataInicio)'>
           <nb-datepicker #inicioPicker></nb-datepicker>
         </div>
         
         <div class="col-3">
-          <label class="label">Data de validade (Final)*:</label>
+          <label class="label">Data de validade (Final):*</label>
           <input nbInput fullWidth [nbDatepicker]="finalPicker"  placeholder="Fim" [formControl]="dataFinal" [status]='getStatus(dataFinal)'>
           <nb-datepicker #finalPicker></nb-datepicker>
         </div>
@@ -82,19 +82,19 @@
 
       <div class="row pb-3">
         <div class="col-4">
-          <label class="label">Produto*:</label>
+          <label class="label">Produto:*</label>
           <input type="text" nbInput fullWidth placeholder="Produto" [formControl]="produto" [status]='getStatus(produto)'>
         </div>
         
         <div class="col-4">
-          <label class="label">Operador*:</label>
+          <label class="label">Operador:*</label>
           <nb-select fullWidth selected="1" placeholder="Tipo" [compareWith]="compareById"  [formControl]="operador" [status]='getStatus(operador)'>
             <nb-option *ngFor="let op of sqlOperations" [value]=op>{{op.title}}</nb-option>
           </nb-select>
         </div>
 
         <div class="col-4">
-          <label class="label">Valor*:</label>
+          <label class="label">Valor:*</label>
           <input type="text" nbInput fullWidth placeholder="Valor"  [formControl]="valor" [status]='getStatus(valor)'>
         </div>
       </div>
@@ -106,7 +106,7 @@
           <button type="button" nbButton outline fullWidth status="basic" (click)="voltar()">Voltar</button>
         </div>
         <div class="offset-4 col-4">
-          <button type="submit" nbButton outline fullWidth status="primary">Confirmar</button>
+          <button type="submit" nbButton outline fullWidth status="success">Adicionar</button>
         </div>
       </div>
     </form>
