--- a/src/app/pages/_data/rules/to-view/rules-to-view.component.html
+++ b/src/app/pages/_data/rules/to-view/rules-to-view.component.html
@@ -1,22 +1,30 @@
 <nb-card>
   <nb-card-header>
-    Duplicar Regra
+
+    <ng-container *ngIf="action === 'to-view'">
+      Visualizar Regra
+    </ng-container>
+    
+    <ng-container *ngIf="action === 'delete'">
+      Inativar Regra
+    </ng-container>
+
   </nb-card-header>
 </nb-card>
 
-<nb-card accent="warning">
+<nb-card [accent]="accent" >
   <nb-card-body>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
+    <form [formGroup]="form" class="needs-validation" novalidate >
       
       <div class="row pb-3">
         <div class="col-8">
           <label class="label">Nome:*</label>
-          <input type="text" [formControl]="nome" nbInput fullWidth placeholder="Nome" [status]='getStatus(nome)' [disabled]="true">
+          <input type="text" [formControl]="nome" nbInput fullWidth placeholder="Nome" >
         </div>
 
         <div class="col-4">
           <label class="label">Tipo:*</label>
-          <nb-select fullWidth  [formControl]="tipo" placeholder="Tipo" [status]='getStatus(tipo)'>
+          <nb-select fullWidth  [formControl]="tipo" placeholder="Tipo">
             <nb-option [value]='null'>Selecione</nb-option>
             <nb-option [value]="'MDFE'">MDFE</nb-option>
             <nb-option [value]="'NFE'">NFE</nb-option>
@@ -28,7 +36,7 @@
       <div class="row pb-3">
         <div class="col-12">
           <label class="label">Descrição:*</label>
-          <textarea type="text" [formControl]="descricao" nbInput fullWidth placeholder="Descrição" [status]='getStatus(descricao)'></textarea>
+          <textarea type="text" [formControl]="descricao" nbInput fullWidth placeholder="Descrição"></textarea>
         </div>
       </div>
 
@@ -36,7 +44,7 @@
       <div class="row pb-3">
         <div class="col-3">
           <label class="label">Importância:*</label>
-          <nb-select fullWidth placeholder="Tipo" [formControl]="importancia" [status]='getStatus(importancia)'>
+          <nb-select fullWidth placeholder="Tipo" [formControl]="importancia" >
             <nb-option [value]="1">1</nb-option>
             <nb-option [value]="2">2</nb-option>
             <nb-option [value]="3">3</nb-option>
@@ -52,7 +60,7 @@
       
         <div class="col-3">
           <label class="label">Menor esforço:*</label>
-          <nb-select fullWidth selected="1" placeholder="Tipo" [formControl]="menorEsforco" [status]='getStatus(menorEsforco)'>
+          <nb-select fullWidth selected="1" placeholder="Tipo" [formControl]="menorEsforco">
             <nb-option [value]="1">1</nb-option>
             <nb-option [value]="2">2</nb-option>
             <nb-option [value]="3">3</nb-option>
@@ -68,13 +76,13 @@
 
         <div class="col-3">
           <label class="label">Data de validade (Inicio):*</label>
-          <input nbInput fullWidth [nbDatepicker]="inicioPicker" placeholder="Inicio" [formControl]="dataInicio" [status]='getStatus(dataInicio)'>
+          <input nbInput fullWidth [nbDatepicker]="inicioPicker" placeholder="Inicio" [formControl]="dataInicio" >
           <nb-datepicker #inicioPicker></nb-datepicker>
         </div>
         
         <div class="col-3">
           <label class="label">Data de validade (Final):*</label>
-          <input nbInput fullWidth [nbDatepicker]="finalPicker"  placeholder="Fim" [formControl]="dataFinal" [status]='getStatus(dataFinal)'>
+          <input nbInput fullWidth [nbDatepicker]="finalPicker"  placeholder="Fim" [formControl]="dataFinal">
           <nb-datepicker #finalPicker></nb-datepicker>
         </div>
       </div>
@@ -82,19 +90,17 @@
       <div class="row pb-3">
         <div class="col-4">
           <label class="label">Produto:*</label>
-          <input type="text" nbInput fullWidth placeholder="Tipo" [formControl]="produto" [status]='getStatus(produto)'>
+          <input type="text" nbInput fullWidth placeholder="Produto" [formControl]="produto" >
         </div>
         
         <div class="col-4">
           <label class="label">Operador:*</label>
-          <nb-select fullWidth selected="1" placeholder="Tipo" [compareWith]="compareById"  [formControl]="operador" [status]='getStatus(operador)'>
-            <nb-option *ngFor="let op of sqlOperations" [value]=op>{{op.title}}</nb-option>
-          </nb-select>
+          <input type="text" nbInput fullWidth placeholder="Tipo" [formControl]="operador" >
         </div>
 
         <div class="col-4">
           <label class="label">Valor:*</label>
-          <input type="text" nbInput fullWidth placeholder="Valor"  [formControl]="valor" [status]='getStatus(valor)'>
+          <input type="text" nbInput fullWidth placeholder="Valor"  [formControl]="valor">
         </div>
       </div>
       
@@ -105,8 +111,8 @@
           <button type="button" nbButton outline fullWidth status="basic" (click)="voltar()">Voltar</button>
         </div>
 
-        <div class="offset-4 col-4">
-          <button type="submit" nbButton outline fullWidth status="warning">Duplicar</button>
+        <div class="offset-4 col-4" *ngIf="action === 'delete'">
+          <button type="button" nbButton outline  (click)="delete()" fullWidth status="danger">Inativar</button>
         </div>
       </div>
   </form>
