--- a/src/app/pages/_data/map/map-dialog/map-dialog.component.html
+++ b/src/app/pages/_data/map/map-dialog/map-dialog.component.html
@@ -1,12 +1,63 @@
+
 <nb-card>
-
-  <nb-card-header>
-    Informações da localização
-  </nb-card-header>
-
   <nb-card-body>
+    <table class="table table-hover ">
+
+      <tbody>
+        <tr>
+          <td class="align-middle"><b>Orgão</b></td>
+          <td class="align-middle">{{data?.orgao}}</td>
+        </tr>
+        
+        <tr>
+          <td class="align-middle"><b>Município</b></td>
+          <td class="align-middle">{{data?.municipio}}</td>
+        </tr>
+    
+        <tr>
+          <td class="align-middle"><b>Sentido</b></td>
+          <td class="align-middle">{{data?.sentido}}</td>
+        </tr>
+    
+        <tr>
+          <td class="align-middle"><b>Latitude</b></td>
+          <td class="align-middle">{{data?.lat}}</td>
+        </tr>
+
+        <tr>
+          <td class="align-middle"><b>Longuitude</b></td>
+          <td class="align-middle">{{data?.lng}}</td>
+        </tr>
+
+      </tbody>
+    </table>
+    <hr>
+
+    <table class="table table-hover ">
+
+      <tbody>
+        
+        <tr>
+          <td class="align-middle"><img src="assets/icon/red-circle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle"><b>4 Alertas Ativos</b></td>
+        </tr>
+
+        <tr>
+          <td class="align-middle"><img src="assets/icon/black-cicle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle"> Nenhum alerta ativo</td>
+        </tr>
+    
+        <tr>
+          <td class="align-middle"><img src="assets/icon/yellow-circle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle">Nenhum alerta ativo</td>
+        </tr>
+
+      </tbody>
+    </table>
 
   </nb-card-body>
+
+
 
   <nb-card-footer>
     <button nbButton outline (click)="dismiss()" fullWidth status="primary">Voltar</button>
