--- a/src/app/pages/_data/antenna/antenna.component.html
+++ b/src/app/pages/_data/antenna/antenna.component.html
@@ -34,8 +34,8 @@
         </div>
 
         <div class="col-4">
-          <label class="label">Adicionar:</label>
-          <button nbButton outline type="submit" fullWidth status="primary">Adicionar</button>
+          <label class="label">Validar:</label>
+          <button nbButton outline type="submit" fullWidth status="primary">Validar</button>
         </div>
       </div>
     </form>
@@ -70,8 +70,8 @@
   </nb-card-body>
   <nb-card-body>
     <div class="offset-8 col-4">
-      <label class="label">Enviar:</label>
-      <button nbButton outline type="submit"  (click)="enviar()" fullWidth status="success">Adicionar</button>
+      <label class="label">Gravar:</label>
+      <button nbButton outline type="submit"  (click)="enviar()" fullWidth status="success">Gravar</button>
     </div>
   </nb-card-body>
 </nb-card>
