--- a/src/app/pages/_data/passageway/fis-vs-sefaz/fis-vs-sefaz.component.html
+++ b/src/app/pages/_data/passageway/fis-vs-sefaz/fis-vs-sefaz.component.html
@@ -5,34 +5,49 @@
   </nb-card-header>
 
   <nb-card-body>
-
     <nb-accordion>
-    
       <nb-accordion-item>
-
         <nb-accordion-item-header>
           Filtros
         </nb-accordion-item-header>
-
         <nb-accordion-item-body>
-          <div class="full-name-inputs">
-            <input type="text" nbInput fullWidth placeholder="Inicio">
-            <input type="text" nbInput fullWidth placeholder="Final">
-            <button class="control-button" nbButton>
-              Buscar
-            </button>
-          </div>
-        </nb-accordion-item-body>
+        
+          <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
+            
+            <div class="full-name-inputs">
+              <input 
+                  nbInput 
+                  fullWidth 
+                  placeholder="Inicio" 
+                  [nbDatepicker]="inicioPicker"
+                  [formControl]="inicio" 
+                  >
+                <nb-datepicker #inicioPicker>
+                </nb-datepicker>
 
+                <input 
+                  nbInput 
+                  fullWidth 
+                  placeholder="Final" 
+                  [nbDatepicker]="finalPicker"
+                  [formControl]="final" 
+                  >
+                <nb-datepicker #finalPicker>
+                </nb-datepicker>
+
+                <button class="control-button" nbButton type="submit">
+                  Buscar
+                </button>
+              </div>
+          </form>
+        </nb-accordion-item-body>
       </nb-accordion-item>
-    </nb-accordion>
+      </nb-accordion>
   </nb-card-body>
 
   <nb-card-body>
-
-    <custom-bar-chart  [data]="data">
+    <custom-bar-chart [data]="data">
     </custom-bar-chart>
-      
   </nb-card-body>
 
 </nb-card>
