--- a/src/app/pages/_data/rules/edit/rules-edit.component.html
+++ b/src/app/pages/_data/rules/edit/rules-edit.component.html
@@ -1,6 +1,6 @@
 <nb-card>
   <nb-card-header>
-    Duplicar Regra
+    Editar Regra
   </nb-card-header>
 </nb-card>
 
@@ -106,7 +106,7 @@
         </div>
 
         <div class="offset-4 col-4">
-          <button type="submit" nbButton outline fullWidth status="warning">Duplicar</button>
+          <button type="submit" nbButton outline fullWidth status="warning">Editar</button>
         </div>
       </div>
   </form>
