--- a/src/app/pages/_data/map/map-dialog/map-dialog.component.html
+++ b/src/app/pages/_data/map/map-dialog/map-dialog.component.html
@@ -3,30 +3,26 @@
   <nb-card-body>
     <table class="table table-hover ">
 
+
       <tbody>
         <tr>
-          <td class="align-middle"><b>Orgão</b></td>
-          <td class="align-middle">{{data?.orgao}}</td>
+          <td class="align-middle"><b>Latitude</b></td>
+          <td class="align-middle">{{data?.latitude}}</td>
         </tr>
         
         <tr>
-          <td class="align-middle"><b>Município</b></td>
-          <td class="align-middle">{{data?.municipio}}</td>
+          <td class="align-middle"><b>Longitude</b></td>
+          <td class="align-middle">{{data?.longitude}}</td>
         </tr>
     
         <tr>
-          <td class="align-middle"><b>Sentido</b></td>
-          <td class="align-middle">{{data?.sentido}}</td>
+          <td class="align-middle"><b>Faixas</b></td>
+          <td class="align-middle">{{data?.faixas}}</td>
         </tr>
     
         <tr>
-          <td class="align-middle"><b>Latitude</b></td>
-          <td class="align-middle">{{data?.lat}}</td>
-        </tr>
-
-        <tr>
-          <td class="align-middle"><b>Longuitude</b></td>
-          <td class="align-middle">{{data?.lng}}</td>
+          <td class="align-middle"><b>Registro</b></td>
+          <td class="align-middle">{{data?.dataHoraInsercao}}</td>
         </tr>
 
       </tbody>
@@ -38,17 +34,17 @@
       <tbody>
         
         <tr>
-          <td class="align-middle"><img src="assets/icon/red-circle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle"><img src="assets/icon/circle/red-circle.svg" alt="..." class="rounded-circle"></td>
           <td class="align-middle"><b>4 Alertas Ativos</b></td>
         </tr>
 
         <tr>
-          <td class="align-middle"><img src="assets/icon/black-cicle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle"><img src="assets/icon/circle/black-circle.svg" alt="..." class="rounded-circle"></td>
           <td class="align-middle"> Nenhum alerta ativo</td>
         </tr>
     
         <tr>
-          <td class="align-middle"><img src="assets/icon/yellow-circle.svg" alt="..." class="rounded-circle"></td>
+          <td class="align-middle"><img src="assets/icon/circle/yellow-circle.svg" alt="..." class="rounded-circle"></td>
           <td class="align-middle">Nenhum alerta ativo</td>
         </tr>
 
