--- a/src/app/pages/_data/map/map.component.html
+++ b/src/app/pages/_data/map/map.component.html
@@ -1,21 +1,29 @@
-<button nbButton ghost (click)="showLegenda()" style="padding: 0;" type="button" >Legenda</button>
- 
+<div class="row">
+  <div class="col">
+    <div class="float-left">
+      <button nbButton ghost (click)="showLegenda()" style="padding: 0;" type="button">Legenda</button>
+    </div>
+
+    <div class="float-right">
+      <b>Antenas exibidas: </b>
+      {{coordenadas.length}}
+    </div>
+  </div>
+</div>
+
 <nb-card>
   <nb-card-body>
 
     <google-map 
-      *ngIf="loaded"
-      [center]="{lat: data?.center?.lat, lng: data?.center?.lng}" 
+      [center]="{lat: -16.6761553, lng: -49.2886361}" 
       [zoom]="8" 
       width="100%" height="85vh" >
       
       <map-marker 
-        [position]="{lat: point?.lat, lng: point?.lng}"
-        [clickable]="true"
-        [label]='point?.label'
-        (mapMouseover)="showDialog(point)"
-        [options]="{icon: point.tipo }"
-        *ngFor="let point of data.points"
+        [position]="{lat: coordenada.latitude, lng: coordenada.longitude}"
+        [options]="{icon: 'assets/icon/radio/radio-outline-red-48-48.svg' }"
+        (mapClick)="showDialog(coordenada)"
+        *ngFor="let coordenada of coordenadas"
       >
       </map-marker>
     </google-map>
