--- a/src/app/pages/_data/antenna/antenna.component.html
+++ b/src/app/pages/_data/antenna/antenna.component.html
@@ -6,7 +6,7 @@
 
 <nb-card>
   <nb-card-body>
-    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate >
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="needs-validation" novalidate  [nbSpinner]="loading" >
    
       <div class="row">
         <div class="col-4">
@@ -43,7 +43,7 @@
 </nb-card>
 
 <nb-card *ngIf="data.length" >
-  <nb-card-body>
+  <nb-card-body [nbSpinner]="loading" >
     <table class="table table-hover table-striped table-bordered">
       <thead class="thead-light">
         
