--- a/src/app/pages/_data/rules/rules.component.html
+++ b/src/app/pages/_data/rules/rules.component.html
@@ -8,21 +8,7 @@
 <nb-card>
   <nb-card-body>
     <div class="col pt-4 pb-4">
-      <nb-accordion>
-        <nb-accordion-item>
-        
-          <nb-accordion-item-header>
-            Filtros 
-          </nb-accordion-item-header>
-
-          <nb-accordion-item-body>
-            <button class="control-button" nbButton type="submit">
-              Buscar
-            </button>
-          </nb-accordion-item-body>
-        
-        </nb-accordion-item>
-      </nb-accordion>
+      <rules-filter (buscar)="buscar($event)"></rules-filter>
     </div>
 
     <div class="col">
@@ -32,9 +18,9 @@
         
         <tr>
           <th class="col-1">#</th>
-          <th class="col-4">Nome</th>
+          <th class="col-5">Nome</th>
           <th class="col-1">Tipo</th>
-          <th colspan="2" class="col-3 text-center">Data</th>
+          <th class="col-2 text-center" colspan="2">Data</th>
           <th class="col-1">Ativo</th>
           <th colspan="3" class="col-2 text-center">Ações</th>
         </tr>
