--- a/src/app/pages/_data/rules/filter/rules-filter.component.html
+++ b/src/app/pages/_data/rules/filter/rules-filter.component.html
@@ -3,8 +3,6 @@
   
     <nb-accordion-item-header>
       Filtros 
-      <br>{{filter.data.final}}
-      <br>{{filter.data.inicio}}
     </nb-accordion-item-header>
 
     <nb-accordion-item-body>
@@ -49,7 +47,7 @@
       <div class="row">
         <div class="col-4">
           <label class="label">Ativo:</label><br>
-          <nb-checkbox [(ngModel)]="filter.status">Considerar regras ativas</nb-checkbox>
+          <nb-checkbox [(ngModel)]="filter.status">Somente Regras Ativas</nb-checkbox>
         </div>
         
       </div>
