--- a/src/app/pages/_data/antenna/antenna.component.html
+++ b/src/app/pages/_data/antenna/antenna.component.html
@@ -35,7 +35,7 @@
 
         <div class="col-4">
           <label class="label">Validar:</label>
-          <button nbButton outline type="submit" fullWidth status="primary">Validar</button>
+          <button nbButton outline type="submit" fullWidth status="basic">Validar</button>
         </div>
       </div>
     </form>
