--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -11,6 +11,7 @@
   <nb-actions size="small">
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
+                nbContextMenuTag="login"
                [onlyPicture]="userPictureOnly"
                [name]="user?.name"
                [picture]="user?.picture">
